// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`linkify transforms absolute links in versioned docs 1`] = `
"### Existing Docs

- [doc1](/docs/1.0.0/subdir/doc1)

### With hash

- [doc2](/docs/1.0.0/doc2#existing-docs)
"
`;

exports[`linkify transforms nothing with no links 1`] = `
"# Don't transform any link here

![image1](assets/image1.png)

# Don't replace inside fenced codeblock

\`\`\`md
![doc4](doc4.md)
\`\`\`

### Non-existing Docs

- [hahaha](hahaha.md)
"
`;

exports[`linkify transforms reference links 1`] = `
"### Existing Docs

- [doc1][doc1]
- [doc2][doc2]

## Repeating Docs

- [doc1][doc1]
- [doc2][doc2]

## Do not replace this

\`\`\`md
![image1][image1]
\`\`\`

[doc1]: /docs/doc1
[doc2]: /docs/doc2
[image1]: assets/image1.png
"
`;

exports[`linkify transforms relative links 1`] = `
"### Relative linking

- [doc1](/docs/doc2)
"
`;

exports[`linkify transforms relative links in versioned docs 1`] = `
"### Relative linking

- [doc1](/docs/1.0.0/doc2)
"
`;

exports[`linkify transforms to correct links 1`] = `
"### Existing Docs

- [doc1](/docs/doc1)
- [doc2](/docs/doc2)
- [doc3](/docs/subdir/doc3)

## Repeating Docs

- [doc1](/docs/doc1)
- [doc2](/docs/doc2)

- [doc-localized](/fr/doc-localized)
"
`;
